// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichFieldEditor should focus the end of input on initial focus 1`] = `
<div
  className="rich-textarea-wrapper"
>
  <div
    className="editor-wrapper"
    onClick={[MockFunction]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="withMinHeight"
    >
      <PluginEditor
        customStyleMap={Object {}}
        decorators={Array []}
        defaultBlockRenderMap={true}
        defaultKeyBindings={true}
        editorKey="editor"
        editorState={
          EditorState {
            "_immutable": Immutable.Record {
              "allowUndo": true,
              "currentContent": Immutable.Record {
                "entityMap": Object {
                  "__add": [Function],
                  "__create": [Function],
                  "__get": [Function],
                  "__getLastCreatedEntityKey": [Function],
                  "__mergeData": [Function],
                  "__replaceData": [Function],
                  "add": [Function],
                  "create": [Function],
                  "get": [Function],
                  "getLastCreatedEntityKey": [Function],
                  "mergeData": [Function],
                  "replaceData": [Function],
                },
                "blockMap": Immutable.OrderedMap {
                  "123": Immutable.Record {
                    "key": "123",
                    "type": "unstyled",
                    "text": "foo",
                    "characterList": Immutable.List [
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                      Immutable.Record {
                        "style": Immutable.OrderedSet [],
                        "entity": null,
                      },
                    ],
                    "depth": 0,
                    "data": Immutable.Map {},
                  },
                },
                "selectionBefore": Immutable.Record {
                  "anchorKey": "123",
                  "anchorOffset": 0,
                  "focusKey": "123",
                  "focusOffset": 0,
                  "isBackward": false,
                  "hasFocus": false,
                },
                "selectionAfter": Immutable.Record {
                  "anchorKey": "123",
                  "anchorOffset": 0,
                  "focusKey": "123",
                  "focusOffset": 0,
                  "isBackward": false,
                  "hasFocus": false,
                },
              },
              "decorator": null,
              "directionMap": Immutable.OrderedMap {
                "123": "LTR",
              },
              "forceSelection": false,
              "inCompositionMode": false,
              "inlineStyleOverride": null,
              "lastChangeType": null,
              "nativelyRenderedContent": null,
              "redoStack": Immutable.Stack [],
              "selection": Immutable.Record {
                "anchorKey": "123",
                "anchorOffset": 0,
                "focusKey": "123",
                "focusOffset": 0,
                "isBackward": false,
                "hasFocus": false,
              },
              "treeMap": Immutable.OrderedMap {
                "123": Immutable.List [
                  Immutable.Record {
                    "start": 0,
                    "end": 3,
                    "decoratorKey": null,
                    "leaves": Immutable.List [
                      Immutable.Record {
                        "start": 0,
                        "end": 3,
                      },
                    ],
                  },
                ],
              },
              "undoStack": Immutable.Stack [],
            },
          }
        }
        handleKeyCommand={[Function]}
        handlePastedText={[Function]}
        onBlur={[MockFunction]}
        onChange={[Function]}
        onFocus={[Function]}
        plugins={
          Array [
            Object {
              "handleDroppedFiles": [Function],
            },
            Object {
              "handleReturn": [Function],
            },
            Object {
              "blockRendererFn": [Function],
              "decorator": [Function],
              "initialize": [Function],
            },
            Object {
              "blockRendererFn": [Function],
              "decorators": Array [
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "handleKeyCommand": [Function],
              "keyBindingFn": [Function],
            },
            Object {
              "MentionSuggestions": [Function],
              "decorators": Array [
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "getAccessibilityProps": [Function],
              "handleReturn": [Function],
              "initialize": [Function],
              "onChange": [Function],
              "onDownArrow": [Function],
              "onEscape": [Function],
              "onTab": [Function],
              "onUpArrow": [Function],
            },
            Object {
              "onChange": [Function],
            },
            Object {
              "decorators": Array [
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
              "onChange": [Function],
            },
            Object {
              "handlePastedFiles": [Function],
            },
            Object {
              "blockRenderMap": Immutable.Map {
                "ordered-list-item": Object {
                  "element": "li",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <ol
                        className="public-DraftStyleDefault-ol"
                      />
                    }
                  />,
                },
                "header-six": Object {
                  "element": "h6",
                  "wrapper": <QuotesWrapper />,
                },
                "header-four": Object {
                  "element": "h4",
                  "wrapper": <QuotesWrapper />,
                },
                "header-one": Object {
                  "element": "h1",
                  "wrapper": <QuotesWrapper />,
                },
                "unordered-list-item": Object {
                  "element": "li",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <ul
                        className="public-DraftStyleDefault-ul"
                      />
                    }
                  />,
                },
                "atomic": Object {
                  "element": "figure",
                  "wrapper": <QuotesWrapper />,
                },
                "unstyled": Object {
                  "aliasedElements": Array [
                    "p",
                  ],
                  "element": "div",
                },
                "header-two": Object {
                  "element": "h2",
                  "wrapper": <QuotesWrapper />,
                },
                "code-block": Object {
                  "element": "pre",
                  "wrapper": <QuotesWrapper
                    innerWrapper={
                      <pre
                        className="public-DraftStyleDefault-pre"
                      />
                    }
                  />,
                },
                "blockquote": Object {
                  "element": "blockquote",
                  "wrapper": <QuotesWrapper />,
                },
                "header-five": Object {
                  "element": "h5",
                  "wrapper": <QuotesWrapper />,
                },
                "header-three": Object {
                  "element": "h3",
                  "wrapper": <QuotesWrapper />,
                },
              },
              "blockStyleFn": [Function],
            },
          ]
        }
      />
      <Decorated(MentionSuggestions)
        canAddMention={false}
        onSearchChange={[MockFunction]}
        suggestions={Immutable.Map {}}
      />
    </div>
  </div>
  <RichFieldToolbar
    attachFiles={[Function]}
    canDropFiles={false}
    canInsertInlineImages={true}
    createToolbarPlugin={[Function]}
    detectGrammarly={[Function]}
    editorKey="editor"
    editorState={
      EditorState {
        "_immutable": Immutable.Record {
          "allowUndo": true,
          "currentContent": Immutable.Record {
            "entityMap": Object {
              "__add": [Function],
              "__create": [Function],
              "__get": [Function],
              "__getLastCreatedEntityKey": [Function],
              "__mergeData": [Function],
              "__replaceData": [Function],
              "add": [Function],
              "create": [Function],
              "get": [Function],
              "getLastCreatedEntityKey": [Function],
              "mergeData": [Function],
              "replaceData": [Function],
            },
            "blockMap": Immutable.OrderedMap {
              "123": Immutable.Record {
                "key": "123",
                "type": "unstyled",
                "text": "foo",
                "characterList": Immutable.List [
                  Immutable.Record {
                    "style": Immutable.OrderedSet [],
                    "entity": null,
                  },
                  Immutable.Record {
                    "style": Immutable.OrderedSet [],
                    "entity": null,
                  },
                  Immutable.Record {
                    "style": Immutable.OrderedSet [],
                    "entity": null,
                  },
                ],
                "depth": 0,
                "data": Immutable.Map {},
              },
            },
            "selectionBefore": Immutable.Record {
              "anchorKey": "123",
              "anchorOffset": 0,
              "focusKey": "123",
              "focusOffset": 0,
              "isBackward": false,
              "hasFocus": false,
            },
            "selectionAfter": Immutable.Record {
              "anchorKey": "123",
              "anchorOffset": 0,
              "focusKey": "123",
              "focusOffset": 0,
              "isBackward": false,
              "hasFocus": false,
            },
          },
          "decorator": null,
          "directionMap": Immutable.OrderedMap {
            "123": "LTR",
          },
          "forceSelection": false,
          "inCompositionMode": false,
          "inlineStyleOverride": null,
          "lastChangeType": null,
          "nativelyRenderedContent": null,
          "redoStack": Immutable.Stack [],
          "selection": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "treeMap": Immutable.OrderedMap {
            "123": Immutable.List [
              Immutable.Record {
                "start": 0,
                "end": 3,
                "decoratorKey": null,
                "leaves": Immutable.List [
                  Immutable.Record {
                    "start": 0,
                    "end": 3,
                  },
                ],
              },
            ],
          },
          "undoStack": Immutable.Stack [],
        },
      }
    }
    emailExtraEnabled={false}
    isFocused={false}
    isRequired={false}
    linkIsOpen={false}
    linkText=""
    linkUrl=""
    mentionSearchResults={Immutable.Map {}}
    notify={[Function]}
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    onFocus={[MockFunction]}
    onLinkClose={[Function]}
    onLinkOpen={[Function]}
    onLinkTextChange={[Function]}
    onLinkUrlChange={[Function]}
    onMentionSearchChange={[MockFunction]}
    productCardsEnabled={true}
  />
</div>
`;

exports[`RichFieldEditor should handle shortcuts 1`] = `
Array [
  Array [
    EditorState {
      "_immutable": Immutable.Record {
        "allowUndo": true,
        "currentContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "123": Immutable.Record {
              "key": "123",
              "type": "unstyled",
              "text": "foo",
              "characterList": Immutable.List [
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
              ],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "decorator": MultiDecorator {
          "decorators": Immutable.List [
            CompositeDraftDecorator {
              "_decorators": Array [
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
                Object {
                  "component": [Function],
                  "strategy": [Function],
                },
              ],
            },
          ],
        },
        "directionMap": Immutable.OrderedMap {
          "123": "LTR",
        },
        "forceSelection": false,
        "inCompositionMode": false,
        "inlineStyleOverride": null,
        "lastChangeType": null,
        "nativelyRenderedContent": null,
        "redoStack": Immutable.Stack [],
        "selection": Immutable.Record {
          "anchorKey": "123",
          "anchorOffset": 3,
          "focusKey": "123",
          "focusOffset": 3,
          "isBackward": false,
          "hasFocus": false,
        },
        "treeMap": Immutable.OrderedMap {
          "123": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 3,
              "decoratorKey": null,
              "leaves": Immutable.List [
                Immutable.Record {
                  "start": 0,
                  "end": 3,
                },
              ],
            },
          ],
        },
        "undoStack": Immutable.Stack [],
      },
    },
  ],
  Array [
    EditorState {
      "_immutable": Immutable.Record {
        "allowUndo": true,
        "currentContent": Immutable.Record {
          "entityMap": Object {
            "__add": [Function],
            "__create": [Function],
            "__get": [Function],
            "__getLastCreatedEntityKey": [Function],
            "__mergeData": [Function],
            "__replaceData": [Function],
            "add": [Function],
            "create": [Function],
            "get": [Function],
            "getLastCreatedEntityKey": [Function],
            "mergeData": [Function],
            "replaceData": [Function],
          },
          "blockMap": Immutable.OrderedMap {
            "123": Immutable.Record {
              "key": "123",
              "type": "unstyled",
              "text": "foo",
              "characterList": Immutable.List [
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
                Immutable.Record {
                  "style": Immutable.OrderedSet [],
                  "entity": null,
                },
              ],
              "depth": 0,
              "data": Immutable.Map {},
            },
          },
          "selectionBefore": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
          "selectionAfter": Immutable.Record {
            "anchorKey": "123",
            "anchorOffset": 0,
            "focusKey": "123",
            "focusOffset": 0,
            "isBackward": false,
            "hasFocus": false,
          },
        },
        "decorator": null,
        "directionMap": Immutable.OrderedMap {
          "123": "LTR",
        },
        "forceSelection": false,
        "inCompositionMode": false,
        "inlineStyleOverride": Immutable.OrderedSet [
          "BOLD",
        ],
        "lastChangeType": null,
        "nativelyRenderedContent": null,
        "redoStack": Immutable.Stack [],
        "selection": Immutable.Record {
          "anchorKey": "123",
          "anchorOffset": 0,
          "focusKey": "123",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "treeMap": Immutable.OrderedMap {
          "123": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 3,
              "decoratorKey": null,
              "leaves": Immutable.List [
                Immutable.Record {
                  "start": 0,
                  "end": 3,
                },
              ],
            },
          ],
        },
        "undoStack": Immutable.Stack [],
      },
    },
  ],
]
`;
